--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>ToDO App</title>
 
     
-    <script src="dist/index.js" type="module"></script>
+    <script src="dist/index.ts" type="module"></script>
     <!-- Bootstrap core CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -43,7 +43,7 @@
   <main>
 
     <div class="container">
-      <div class="col-2 col-md-4">
+      <div class="col-md-4">
         <h1>ToDo</h1>
         
 
