--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>ToDO App</title>
 
     
-    <script src="dist/index.ts" type="module"></script>
+    <script src="dist/index.js" type="module"></script>
     <!-- Bootstrap core CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
