--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kelli Miguez">
 
-    <title>ToDO App</title>
+    <title>My ToDo App</title>
 
     
     <script src="dist/index.js" type="module"></script>
